repo/apps/common/rancher-versions/rancher-versions.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: versions
  namespace: rancher-vesions
  labels:
    app: versions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: versions
  template:
    metadata:
      labels:
        app: versions
    spec:
      containers:
      - name: versions
        image: clemenko/dzver
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 5000
