repo/apps/common/rancher-versions/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: versions
  name: versions
spec:
  selector:
    app: versions
  ports:
  - name: versions
    protocol: TCP
    port: 5000
    targetPort: 5000
