repo/apps/common/rancher-versions/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: versions
  namespace: rancher-versions
  annotations:
    tailscale.com/funnel: "true"
spec:
  rules:
  - host: "versions.${domain_ts}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: versions
            port:
              number: 5000
